--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicia sesión 
     </title>
-    <link rel="stylesheet" href="/css/estilosfor.css">
+    <!--<link rel="stylesheet" href="/css/estilosfor.css">-->
 </head>
 
 
