--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1086,3 +1086,270 @@ span {
   border-radius: 8px;
   /* Optional: add some border radius for visual appeal */
 }
+
+
+
+
+/*Estilos de tabla*/
+.table-container {
+  overflow-x: auto; /* Permite el desplazamiento horizontal en pantallas pequeñas */
+  margin: 20px; /* Ajusta el margen alrededor del contenedor */
+  margin-bottom: 100px; /* Añade margen en la parte inferior */
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 2px solid #333333; /* Color de borde oscuro */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra más fuerte para una mejor separación */
+  background-color: #1e1e1e; /* Fondo oscuro para la tabla */
+}
+
+th, td {
+  padding: 12px; /* Padding para mejor lectura */
+  text-align: center;
+  border: 2px solid #333333; /* Color de borde oscuro */
+  border-radius: 8px; /* Esquinas redondeadas para las celdas */
+  color: #e0e0e0; /* Texto claro en las celdas */
+}
+
+th {
+  background-color: #2c2c2c; /* Fondo de encabezados gris oscuro */
+  color: #ffffff; /* Texto blanco en encabezados */
+  font-weight: bold; /* Negrita en encabezados */
+}
+
+tr:nth-child(odd) {
+  background-color: #2c2c2c; /* Color de fondo de las filas impares */
+}
+
+tr:nth-child(even) {
+  background-color: #1e1e1e; /* Color de fondo de las filas pares */
+}
+
+tr:hover {
+  background-color: #444444; /* Color de fondo cuando se pasa el cursor sobre una fila */
+  transition: 0.5s ease-out;
+}
+
+.contenedor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; /* Asegura que el contenedor se ajuste verticalmente */
+  margin-bottom: 20px; /* Añade margen en la parte inferior del contenedor */
+}
+
+.descripcion {
+  width: auto; /* Ajusta el ancho de la descripción automáticamente */
+}
+
+h1 {
+  text-align: center;
+  font-size: 2em; /* Ajusta el tamaño del texto del título */
+  margin: 20px 0;
+  color: #000000; /* Texto claro para el título */
+}
+
+/*Estilos de tabla*/
+
+
+
+
+/*Estilos Form*/
+
+
+.titulo{
+  text-align: center;
+}
+
+
+.bton:hover {
+  background-color: #6190cd;
+}
+
+.correcto{
+  /*background-color: #36c9c6;*/
+  border: 1px solid green;
+}
+.error{
+  background-color: #ff7332b1;
+  border: 1px solid red;
+  color: black;
+}
+.circleCrossNombre, .circleCrossCelular, .circleCrossCorreo,.circleCrossContrasena{
+  margin-left: 5px;
+  color: red;
+}
+.ocultar{
+  display: none;
+  visibility: hidden;
+}
+.mensajeNombre, .mensajeCelular, .mensajeCorreo,.mensajeContrasena{
+  color: red;
+  font-size: small;
+}
+.circleCheckNombre, .circleCheckCelular, .circleCheckCorreo, .circleCheckContrasena{
+  color: rgb(68, 207, 196);
+}
+.qu{
+  display: flex;
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center;
+  margin-top: 50px;
+}
+
+
+/* Aplica estos estilos a ambos formularios */
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f0f4f8; /* Color de fondo para mejorar el contraste */
+  margin: 0;
+  padding: 0;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center; /* Centra horizontalmente el formulario */
+  align-items: center; /* Centra verticalmente el formulario */
+  height: 100vh; /* Ocupa el 100% de la altura de la ventana */
+  padding: 20px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra horizontalmente los elementos hijos */
+  width: 100%;
+  max-width: 400px; /* Limita el ancho máximo del formulario */
+  padding: 30px;
+  box-shadow: 0 0 20px #293241;
+  border-radius: 7px;
+  background-color: #fff; /* Fondo blanco para el formulario */
+}
+
+.form-title {
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+}
+
+.input-container {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc; /* Borde gris claro */
+  border-radius: 5px;
+  background-color: #dffbfc;
+  outline-color: #3d5b81;
+  font-size: 14px;
+  color: #333; /* Color de texto */
+}
+
+button.submit {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #3d5b81;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer; /* Cambia el cursor a mano para el botón */
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+button.submit:hover {
+  background-color: #6190cd;
+}
+
+.signup-link {
+  margin-top: 20px;
+  text-align: center; /* Centra el texto */
+  font-size: 14px;
+}
+
+.signup-link a {
+  color: #3d5b81;
+  text-decoration: none;
+}
+
+.signup-link a:hover {
+  text-decoration: underline;
+}
+
+.input-container-login{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
+/*Estilosformulario*/
+.table-container {
+  overflow-x: auto; /* Permite el desplazamiento horizontal en pantallas pequeñas */
+  margin: 20px; /* Ajusta el margen alrededor del contenedor */
+  margin-bottom: 100px; /* Añade margen en la parte inferior */
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 2px solid #333333; /* Color de borde oscuro */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra más fuerte para una mejor separación */
+  background-color: #1e1e1e; /* Fondo oscuro para la tabla */
+}
+
+th, td {
+  padding: 12px; /* Padding para mejor lectura */
+  text-align: center;
+  border: 2px solid #333333; /* Color de borde oscuro */
+  border-radius: 8px; /* Esquinas redondeadas para las celdas */
+  color: #e0e0e0; /* Texto claro en las celdas */
+}
+
+th {
+  background-color: #2c2c2c; /* Fondo de encabezados gris oscuro */
+  color: #ffffff; /* Texto blanco en encabezados */
+  font-weight: bold; /* Negrita en encabezados */
+}
+
+tr:nth-child(odd) {
+  background-color: #2c2c2c; /* Color de fondo de las filas impares */
+}
+
+tr:nth-child(even) {
+  background-color: #1e1e1e; /* Color de fondo de las filas pares */
+}
+
+tr:hover {
+  background-color: #444444; /* Color de fondo cuando se pasa el cursor sobre una fila */
+  transition: 0.5s ease-out;
+}
+
+.contenedor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; /* Asegura que el contenedor se ajuste verticalmente */
+  margin-bottom: 20px; /* Añade margen en la parte inferior del contenedor */
+}
+
+.descripcion {
+  width: auto; /* Ajusta el ancho de la descripción automáticamente */
+}
+
+h1 {
+  text-align: center;
+  font-size: 2em; /* Ajusta el tamaño del texto del título */
+  margin: 20px 0;
+  color: #000000; /* Texto claro para el título */
+}
+/*Estilos Form*/
+/*Estilos Form*/
