--- a/views/calculadora.ejs
+++ b/views/calculadora.ejs
@@ -61,7 +61,7 @@
         <div class="calculator-container">
 
           <!-- Cuadro para ingresar datos -->
-          <div class="form-container">
+          <div class="input-container">
             <form id="calculator-form" class="calculator-form">
               <label for="shape" class="form-label">
                 <h1 style="font-size: 30px">Selecciona una <span>figura:</span></h1>
