--- a/views/registrer.ejs
+++ b/views/registrer.ejs
@@ -91,7 +91,7 @@
         </div>
 
         <div class="input-container">
-          <input name="contrasena" id="contrasena" type="password" placeholder="contrasena" required>
+          <input name="contrasena" id="contrasena" type="password" placeholder="Contraseña" required>
         </div>
 
         <div class="contenedor-mse">
@@ -100,7 +100,7 @@
         </div>
         <div class="input-container">
           <input name="confirmarContrasena" id="confirmarContrasena" type="password"
-            placeholder="Confirma tu Contrasena" required>
+            placeholder="Confirma tu Contraseña" required>
         </div>
           <button type="submit" class="submit">Regístrarse</button>
           <p class="signup-link">
