--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse center-navbar" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" >
-          <a class="nav-link" href="/about">Inico</a>
+          <a class="nav-link" href="/about">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about-section">Acerca de</a>
